--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="במידה ואינך רשום, להרשמה לחץ כאן"
+            android:text="שכחת את הסיסמא שלך ?"
             android:textSize="15dp" />
 
 
