--- a/app/src/main/res/layout/fragment_details_tab.xml
+++ b/app/src/main/res/layout/fragment_details_tab.xml
@@ -597,10 +597,12 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/waze"
                 android:layout_marginBottom="20dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:clickable="true">
 
                 <TextView
                     android:textStyle="bold"
@@ -619,7 +621,13 @@
                     android:singleLine="false"
                     android:background="@null"
                     android:layout_marginRight="20dp"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:clickable="true"/>
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/waze"
+                    android:background="@drawable/waze"/>
 
             </LinearLayout>
 
